# hermes-wiki

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  README.md  SPEC.md  llms.txt  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  evals-media.yml  pages.yml
adapters/: __init__.py  base.py
adapters/hermes/: __init__.py  cli_plugin.py  memory_hooks.py  wiki_plugin.py  wiki_tools.py
adapters/hermes/skills/wiki-commands/: SKILL.md
adapters/hermes/skills/wiki-ingestion/: SKILL.md
adapters/hermes/skills/wiki-media-ingestion/: SKILL.md
adapters/hermes/skills/wiki-writing/: SKILL.md
adapters/standalone/: __init__.py
dashboard/: README.md  manifest.json  package-lock.json  package.json  plugin_api.py
dashboard/src/: index.tsx  style.css
docs/: _config.yml  agent-tools.md  architecture.md  cli-reference.md  dashboard.md  faq.md  getting-started.md  hooks-architecture.md  index.md  karpathy-pattern.md  media-ingestion-design.md  quality-audit.md  robots.txt
docs/_layouts/: default.html
docs/assets/css/: style.css
evals/: README.md  __init__.py  test_graph_evals.py  test_media_extraction.py  test_media_plumbing.py  test_retrieval_evals.py  test_structural_evals.py
evals/corpus/dedup-threshold/: expected_structure.yaml  relevance.yaml
evals/corpus/dedup-threshold/sources/: alpha-architectures.md  beta-survey.md
evals/corpus/media/: LICENSES.md  golden-fingerprints.json
evals/corpus/multi-source-contradiction/: expected_structure.yaml  relevance.yaml
evals/harness/: __init__.py  cases.py  retrieval.py  runner.py  store.py  structural.py  wiki_builder.py
evals/results/: bm25-baseline.jsonl
evals/retrieval/: fixture-qrels.yaml
evals/rubrics/: caption_faithfulness.md
evals/skills/: contradiction.cases.json  dedup.cases.json  faithfulness.cases.json
fixtures/: __init__.py  factory.py  seed_data.py
fixtures/sources/: agent-memory-article.md  memory-workshop-transcript.txt
hermes_wiki/: __init__.py  _validators.py  attribution.py  db.py  frontmatter.py  git_ops.py  harness.py  home.py  kanban_link.py  lint.py  management.py  media.py  media_processors.py  memory_companion.py  metrics.py  models.py  monitors.py  navigation.py  pipeline.py  projection.py  prompt.py  search.py  skills.py  slash.py  social.py  templates.py  tools.py  trust.py  visibility.py  youtube.py
hermes_wiki/classifiers/: __init__.py
hermes_wiki_cli/: __init__.py  cli.py
tests/: conftest.py  test_attribution.py  test_audio_processor.py  test_cli_entrypoint_plugin.py  test_cli_management.py  test_cli_projection_rebuild.py  test_dashboard_plugin_api.py  test_db.py  test_git_ops.py  test_golden_default_processor.py  test_harness.py  test_home.py  test_image_processor.py  test_kanban_link.py  test_lint.py  test_media.py  test_media_classifiers.py  test_media_pipeline.py  test_memory_companion.py  test_metrics.py  test_monitors.py  test_pdf_processor.py  test_pipeline.py  test_projection.py  test_prompt_skill_guidance.py  test_scaffold.py  test_search.py  test_skills.py  test_slash.py  test_social.py  test_templates.py  test_tools.py  test_trust_records.py  test_validators.py  test_video_processor.py  test_visibility_prompt.py  test_youtube.py
tests/adapters/: test_hermes.py  test_selection.py  test_standalone.py
tests/fixtures/: test_factory.py
tests/golden/default_processor/: article.txt  paper.txt  transcript.txt  unknown.txt
(+10 files in other folders)
