[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[project]
name = "hermes-wiki"
version = "0.9.0"
description = "Karpathy-style LLM Wikis for Hermes Agent — persistent, curated, attributable knowledge bases"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Hermes Wiki contributors" }]
license = "MIT"
dependencies = [
  "fastapi>=0.133.1",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.11.9,<0.12"]
image = ["Pillow>=10.0"]
audio = ["faster-whisper>=1.0,<2.0"]
video = ["scenedetect>=0.6.7,<0.7", "opencv-python>=4.9", "faster-whisper>=1.0,<2.0"]
youtube = ["yt-dlp>=2026.1.1"]

[project.scripts]
hermes-wiki = "hermes_wiki_cli.cli:main"

[project.entry-points."hermes_agent.plugins"]
wiki = "adapters.hermes.cli_plugin"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.16",
  "ty==0.0.44",
  "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@main",
  "pytest-cov>=7.1.0",
  "pdfplumber>=0.11.9,<0.12",
  "Pillow>=10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hermes_wiki", "hermes_wiki_cli", "adapters", "fixtures"]

[tool.pytest.ini_options]
addopts = "-ra -m 'not eval and not eval_llm and not eval_media'"
testpaths = ["tests", "evals"]
markers = [
  "eval: deterministic quality evals (structural, retrieval, graph); run with -m eval",
  "eval_llm: LLM-judge content evals; scheduled runs only, requires judge API key",
  "eval_media: real-extraction media evals (heavy deps); weekly + pre-release runs",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  ".hermes-test",
  ".hermes-test-*",
  ".hermes-test-g*",
  ".readiness",
  ".ruff_cache",
  ".venv",
  "node_modules",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.ty]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = [
  "hermes_wiki",
  "hermes_wiki_cli",
  "adapters",
  "evals",
  "fixtures",
  "tests",
]
exclude = [
  ".hermes-test/",
  ".readiness/",
  ".venv/",
  "node_modules/",
]
